RESOLVED FIXED274571
REGRESSION (277166@main): [iOS] Search doesn’t highlight text being searched in Mail
https://bugs.webkit.org/show_bug.cgi?id=274571
Summary REGRESSION (277166@main): [iOS] Search doesn’t highlight text being searched ...
Aditya Keerthi
Reported 2024-05-22 22:06:08 PDT
Attachments
Aditya Keerthi
Comment 1 2024-05-22 22:51:01 PDT
EWS
Comment 2 2024-05-23 08:39:57 PDT
Committed 279205@main (a1f1924291fb): <https://commits.webkit.org/279205@main> Reviewed commits have been landed. Closing PR #28972 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.